# Cougar

./: Cargo.toml  README.md  plot_data.ipynb
RawData/: exp_BP_single.txt  exp_CP_single.txt  exp_LP_single.txt
halo2_proofs/src/: poly.rs
halo2_proofs/src/.ipynb_checkpoints/: lib-checkpoint.rs
halo2_proofs/src/poly/: evaluator.rs
halo2_proofs/src/poly/.ipynb_checkpoints/: domain-checkpoint.rs
src/: main.rs
src/BP/: prover.rs  test_IPA.rs  transcript.rs  utils.rs  verifier.rs
src/BP/.ipynb_checkpoints/: README-checkpoint.md  mod-checkpoint.rs  setup-checkpoint.rs
src/Cougar/: LeopardPCS.rs  custom_gates.rs  mod.rs  prover.rs  setup.rs  transcript.rs
src/Cougar/.ipynb_checkpoints/: README-checkpoint.md  execution_trace-checkpoint.rs  permutation-checkpoint.rs  test_IPA-checkpoint.rs  utils-checkpoint.rs  verifier-checkpoint.rs
src/Cougar/LeopardPCS/: leopard_verifier.rs
src/Cougar/LeopardPCS/.ipynb_checkpoints/: leopard_prover-checkpoint.rs
src/Leopard/: README.md  utils.rs
src/Leopard/.ipynb_checkpoints/: IPA-checkpoint.rs  mod-checkpoint.rs  msm_pippenger-checkpoint.rs  setup-checkpoint.rs  test_IPA-checkpoint.rs  transcript-checkpoint.rs
